--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         <h1>MAXIMILLIAN EINST<span class="reverse">E</span>IN</h1>
         <div class="line"></div>
         <section id="link-container">
-          <!-- <a href="http://einsteinisdead.com/assets/resume_06_2015.pdf">CV</a> -->
           <a
             href="https://docs.google.com/document/d/1BWBoRrQQbLolxVPavyYSi05LPTgScuN5fSrGIjWN7zw/edit?usp=sharing"
             >CV</a
           >
           <span class="spacer"></span> <a href="https://github.com/meinstein">GH</a>
+          <span class="spacer"></span> <a href="https://meinstein.github.io/odad/">OD</a>
           <span class="spacer"></span> <a href="https://www.linkedin.com/in/maxeinstein/">LI</a>
-          <span class="spacer"></span> <a href="https://fuhqu.com/">BL</a>
+          <span class="spacer"></span> <a href="https://fuhqu.netlify.app/">BL</a>
           <span class="spacer"></span>
           <a href="https://meinstein.github.io/ig-me/">IG</a>
         </section>
       </header>
       <section id="bio-container">
         <!-- 1 -->
-        My name is Max<sup><a href="#note_1">1</a></sup>
+        My name is Maximillian Einstein<sup><a href="#note_1">1</a></sup>
         <!-- 2 -->
         and I am an Angeleno living in Amsterdam.<sup><a href="#note_2">2</a></sup>
         <!-- 3 -->
@@ -43,14 +43,13 @@
         <!-- 4 -->
         However, I arrived at this occupation by nontraditional means.<sup><a href="#note_4">4</a></sup>
         <!-- 5 -->
-        In terms of graduate education, I have a JD/MBA dual degree<sup
+        In terms of graduate education, I hold a JD/MBA dual degree<sup
           ><a href="#note_5">5</a></sup
         >
         <!-- 6 -->
         and am a licensed member of The State Bar of California.<sup><a href="#note_6">6</a></sup>
         <!-- 7 -->
-        In terms of undergraduate education, I have a dual B.A. in disparate areas of social
-        science.<sup><a href="#note_7">7</a></sup>
+        In terms of undergraduate education, I hold a two B.A. degrees in disparate fields.<sup><a href="#note_7">7</a></sup>
         <!-- 8 -->
         I also fluently speak a quirky German dialect<sup><a href="#note_8">8</a></sup>
         <!-- 9 -->
@@ -64,36 +63,37 @@
           <li id="note_1">But I go by Max.</li>
           <!-- 2 -->
           <li id="note_2">
-            The quality of life in Los Angeles is sub par for someone who does not drive and has
-            poor literacy in TV & film.
+            The quality of life in Los Angeles is sub par for someone who does not drive and does not care much for
+            The Industry.
           </li>
           <!-- 3 -->
           <li id="note_3">
-            My exact title at the moment is Senior Frontend Engineer at a thriving startup in Amsterdam
-            called Brenger, where I am part of a very small engineering team solving interesting problems
-            in the bulky goods transportation space. I was previously a Senior Member of Technical Staff 
+            My exact title at the moment is Staff Software Engineer at a wonderful company called 
+            Ophelia, where I am part of a very small engineering team focused on making evidence-based treatments 
+            for opioid use disorder (OUD) accessible to everyone. I was previously a Senior Member of Technical Staff 
             at Oracle, where I served as frontend lead on the the Autonomous Data Science Cloud Service 
             team.
           </li>
           <!-- 3 -->
           <li id="note_4">
-            At first, I wanted to become a lampmaker. I gave it a good faith effort, but ultimately
-            ran out of puns to name my creations with. Nevertheless, my lamps are still on display
+            At first, I wanted to become a lampmaker. I gave that a good faith effort, but ultimately
+            ran out of puns to name my creations with. Nevertheless, said lamps are still on display
             at:
-            <a href="https://turnmeonlamps.com">TurnMeOnLamps.com</a>. My next endeavor was as a
-            filmmaker — a truly novel line of work for any native Angeleno. I focused on an array of
-            edgy topics, but in the end I think my cinematic style proved too esoteric to ever win me an
-            Academy Award. I'll let you judge <a href="https://black-einstein.netlify.com">my short
-            firms</a> for yourself. I eventually struck gold when I learned about a community of generative artists
+            <a href="https://turnmeonlamps.netlify.app">TurnMeOnLamps.com</a>. My next endeavor was to become a
+            filmmaker — a truly novel line of work for any native Angeleno. I focused in on an array of
+            edgy topics, but ultimately I believe my cinematic style proved too esoteric to ever gain mass appear.
+            I'll let you judge <a href="https://black-einstein.netlify.com">my short
+            films</a> for yourself. I eventually found a more lasting groove through the world of generative art
             and data visualization designers. That influence turned into a wellspring of creative expression
-            and inspired me to pursue computer programming. I haven't looked back once. Here you'll find a link to my
-            most prized personal artifacts: <a href="https://datalooksdope.com">DataLooksDope.com</a>.
+            that inspired me to pursue software engineering. I haven't looked back once. Here you'll find a link to some of my
+            most prized personal artifacts: <a href="https://meinstein.github.io/odad">ODAD</a> and 
+            <a href="https://datalooksdope.netlify.app">DataLooksDope.com</a>.
           </li>
           <!-- 4 -->
           <li id="note_5">
-            I earned my J.D. from Southwestern Law School, where I graduated in the top 10% of my
-            class. I earned my M.B.A at the Drucker School of Management as part of a dual degree
-            program with my aforementioned law school. My primary passion during this time of my
+            I have a J.D. from Southwestern Law School, where I graduated in the top 10% of my
+            class - and I have an M.B.A from the Drucker School of Management that was earned as part of a dual degree
+            program with my law school. My primary passion during this time of my
             life was not Criminal Law or Mergers and Aquisitions, but rather the Homelessness
             Prevention Law Project, where I served as President. I believe that as a society we are
             far too desensitized to homelessness, which is why I also created a series of filmed
