--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           ><a href="#note_3">3</a></sup
         >
         <!-- 4 -->
-        However, I arrived at this occupation by nontraditional means.<sup><a href="#note_4">4</a></sup>
+        However, I arrived at that occupation by nontraditional means.<sup><a href="#note_4">4</a></sup>
         <!-- 5 -->
         In terms of graduate education, I hold a JD/MBA dual degree<sup
           ><a href="#note_5">5</a></sup
