--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             at:
             <a href="https://turnmeonlamps.netlify.app">TurnMeOnLamps.com</a>. My next endeavor was to become a
             filmmaker — a truly novel line of work for any native Angeleno. I focused in on an array of
-            edgy topics, but ultimately I believe my cinematic style proved too esoteric to ever gain mass appear.
+            edgy topics, but ultimately I believe my cinematic style proved too esoteric to ever gain mass appeal.
             I'll let you judge <a href="https://black-einstein.netlify.com">my short
             films</a> for yourself. I eventually found a more lasting groove through the world of generative art
             and data visualization designers. That influence turned into a wellspring of creative expression
