--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           ><a href="#note_5">5</a></sup
         >
         <!-- 6 -->
-        and am a licensed member of The State Bar of California.<sup><a href="#note_6">6</a></sup>
+        and am a licensed member of the State Bar of California.<sup><a href="#note_6">6</a></sup>
         <!-- 7 -->
-        In terms of undergraduate education, I hold a two B.A. degrees in disparate fields.<sup><a href="#note_7">7</a></sup>
+        In terms of undergraduate education, I hold two degrees in relatively disparate fields.<sup><a href="#note_7">7</a></sup>
         <!-- 8 -->
         I also fluently speak a quirky German dialect<sup><a href="#note_8">8</a></sup>
         <!-- 9 -->
