fix black-einstein link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a href="https://turnmeonlamps.netlify.app">TurnMeOnLamps.com</a>. My next endeavor was to become a
             filmmaker — a truly novel line of work for any native Angeleno. I focused in on an array of
             edgy topics, but ultimately I believe my cinematic style proved too esoteric to ever gain mass appeal.
-            I'll let you judge <a href="https://black-einstein.netlify.com">my short
+            I'll let you judge <a href="https://black-einstein.netlify.com/">my short
             films</a> for yourself. I eventually found a more lasting groove through the world of generative art
             and data visualization designers. That influence turned into a wellspring of creative expression
             that inspired me to pursue software engineering. I haven't looked back once. Here you'll find a link to some of my
